syntax = "proto3";

// 命 令 号: 3501
// 命令名称: intelligent_dev_complex_get
// 命令描述: 复合设置指定传感器信息
// 文件名称: d2c3501_intelligent_dev_complex_get.proto

// 以下是 Android 生成对应 Java 所需信息
option java_package = "com.ubtedu.deviceconnect.libs.ukit.smart.protobuffer";
option java_outer_classname = "PbIntelligentDevComplexGet";

message IntelligentDevComplexGetRequest {
    message dev_info_t {
        uint32 dev = 1;//设备类型
        uint32 subdev = 2;//子设备类型
        uint32 cmd = 3;//命令号
        uint32 id = 4;//ID
        bytes data = 5;//数据
    }
    repeated dev_info_t dev_info = 1;
}

message IntelligentDevComplexGetResponse {
    message dev_info_t {
        uint32 dev  = 1;//设备类型
        uint32 subdev = 2;//子设备类型
        uint32 cmd = 3;//命令号
        uint32 id = 4;//ID
        uint32 ack = 5;
        bytes data = 6;//数据
    }
    repeated dev_info_t dev_info = 1;
}
